# DIProfiler

./: docker-compose.yaml  pyproject.toml  requirements.txt
examples/: 01_rule_based_profiler.py  02_ml_profiler.py  03_diprofiler.py  04_llm_prefetch.py  05_benchmark.py
src/core/: capabilities.py  capability_config.py  engine.py  io.py  loader.py  pipeline.py  profiler.py  registry.py  writer.py
src/engines/: duckdb_engine.py
src/engines/datafusion/: base.py  loader.py  writer.py
src/engines/datafusion/file/: loader.py  writer.py
src/engines/duckdb/: base.py  loader.py  writer.py
src/engines/duckdb/database/: common.py  loader.py  writer.py
src/engines/duckdb/file/: loader.py  writer.py
src/engines/spark/: base.py  loader.py  writer.py
src/engines/spark/database/: common.py  loader.py  writer.py
src/engines/spark/file/: loader.py  writer.py
src/models/: models.py
src/profilers/: engine_profiler.py  features.py  llm_engine_profiler.py  ml_engine_profiler.py  prefetching_profiler.py
tests/: test_capabilities.py  test_engine_profiler.py  test_features.py  test_llm_engine_profiler.py  test_ml_engine_profiler.py  test_models.py  test_prefetching_profiler.py  test_registry.py
