[project]
name = "diprofiler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.9",
    "scikit-learn>=1.4",
    "duckdb>=1.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.5",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.uv]
package = false

[tool.ruff.lint]
select = ["E", "F", "I"]
