[project]
name = "diprofiler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.9",
    "scikit-learn>=1.4",
    "narwhals>=1.0",
]

[project.optional-dependencies]
duckdb = ["duckdb>=1.0"]
datafusion = ["datafusion>=40.0", "pyarrow>=17.0"]
llm = ["anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "reportlab>=4.5.1",
]
